# cpp_bottom_up

./: CMakeLists.txt  Dockerfile
bindings/shitTalker/: CMakeLists.txt  shitTalker.cpp
lib/: CMakeLists.txt
lib/ShitTalker/include/: ShitTalker.h  TalkShit.h
lib/ShitTalker/src/: ShitTalker.cpp  TalkShit.cpp
miniconda3_ubuntu/: Dockerfile
src/: CMakeLists.txt  dummy.cpp
